# products-api

./: .env.example  .gitignore  Dockerfile  README.md  dashboard.py  docker-compose.yml  entrypoint.sh  pyproject.toml  seed.py
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 0dfef06b7ef3_create_products_table.py  9d6aa7229f3c_create_products_table.py  c85b64f3b496_create_users_table.py
products_api/: app.py
products_api/core/: database.py  security.py
products_api/models/: __init__.py  products.py  users.py
products_api/routers/: auth.py  products.py
products_api/schemas/: auth.py  products.py
tests/: test_analytics.py  test_products.py  test_security_flow.py
