[tool.poetry]
name = "products-api"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "products_api"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pydantic = "^2.9.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
aiosqlite = "^0.20.0"
pydantic-settings = "^2.5.0"
alembic = "^1.13.0"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
taskipy = "^1.13.0"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
pytest-cov = "^7.0.0"

[tool.ruff]
line-length = 79

[tool.taskipy.tasks]
lint = 'ruff check'
format = 'ruff format'
run = 'fastapi dev products_api/app.py'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
